[package]
name = "lang-compiler"
version = "0.1.0"
authors = ["tech6hutch <tech_hutch@verizon.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.1.0"
either = "1.5.3"
if_chain = "1.0.0"
itertools = "0.9.0"
lazy_static = "1.4.0"
normalize-line-endings = "0.3.0"
num-bigint = "0.2.6"
unicode_names2 = "0.4.0"
